[metadata]
name = atilo
author = wqy
author_email = qiyingwangwqy@gmail.com
description = Install linux on termux.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WqyJh/python-atilo
keywords = termux, linux, android
license_files = LICENSE
classifiers =
    Operating System :: Android
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only


[options]
include_package_data = True
packages = find:


[options.package_data]
* = *.txt, *.rst, *.md
